fix: better gap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,7 +22,7 @@
 
 .big-idea-wrapper {
   margin: 20px 0;
-  gap: 0 40px;
+  gap: 0 25px;
 }
 
 .big-idea-title {
